packages/portfolio-site/main/default/objects/Testimonial__c/Testimonial__c.object-meta.xml
<CustomObject>
    <label>Testimonial</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Testimonial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testimonials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>