packages/portfolio-site/main/default/objects/Testimonial__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a testimonial has been approved.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>