packages/portfolio-site/main/default/objects/Testimonial__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <description>Used when Contact__c lookup is null (most visitor submissions)</description>
    <label>Author Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>