packages/portfolio-site/main/default/objects/Testimonial__c/fields/Author_Title__c.field-meta.xml
<CustomField>
    <fullName>Author_Title__c</fullName>
    <description>e.g. “VP of Technology”</description>
    <label>Author Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>