packages/portfolio-site/main/default/objects/Testimonial__c/fields/Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_URL__c</fullName>
    <description>Direct link to photo (LinkedIn, Gravatar, etc.)</description>
    <label>Avatar URL</label>
    <type>Url</type>
</CustomField>