packages/portfolio-site/main/default/objects/Testimonial__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Testimonials</relationshipLabel>
    <relationshipName>Testimonials</relationshipName>
    <type>Lookup</type>
</CustomField>