packages/portfolio-site/main/default/objects/Testimonial__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Needed for dynamic sentence fragments</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>