packages/portfolio-site/main/default/objects/Testimonial__c/fields/Vibe_Mode__c.field-meta.xml
<CustomField>
    <fullName>Vibe_Mode__c</fullName>
    <label>Vibe Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>